<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="enter_names_of_players">Enter names of players</string>
    <string name="player_two_name">Player two name</string>
    <string name="player_one_name">Player one name</string>
    <string name="start_game">Start Game</string>
    <string name="restart_game">Restart Game</string>
    <string name="player_two">Player Two</string>
    <string name="player_one">Player One</string>
    <string name="result">Result</string>
    <string name="play_against_computer">Play against computer</string>
    <string name="play_against_friend">Play against friend</string>
    <string name="tic_tac_toe">Tic-Tac-Toe</string>
    <string name="your_choice">Your Choice</string>
    <string name="start">start</string>
    <string name="back">back</string>
    <string name="score_x_0">Score x: 0</string>
    <string name="score_o_0">Score o: 0</string>
    <string name="score">Score</string>
    <string name="x_0">x: 0</string>
    <string name="o_0">o: 0</string>
</resources>