<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Bot">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"/>
        <TextView
            android:id="@+id/xScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x_0"
            android:textColor="@color/white"
            android:layout_marginEnd="20dp"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/oScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o_0"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:padding="10dp"
            android:background="@drawable/baseline_keyboard_backspace_24"
            android:textSize="35sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_above="@id/container"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layoutX"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/cyan_border"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/player_one"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ximage"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutO"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/white_border"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/o"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/player_two"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/oimage"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@drawable/grid_cyan"
        android:weightSum="3"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="3">

            <ImageView
                android:id="@+id/image1"
                android:tag="0"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                tools:ignore="ContentDescription,ImageContrastCheck,NestedWeights" />

            <ImageView
                android:id="@+id/image2"
                android:tag="1"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <ImageView
                android:tag="2"
                android:id="@+id/image3"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_margin="10dp"
                tools:ignore="ContentDescription" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:weightSum="3">

            <ImageView
                android:tag="3"
                android:id="@+id/image4"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                tools:ignore="ContentDescription,ImageContrastCheck,NestedWeights" />

            <ImageView
                android:tag="4"
                android:id="@+id/image5"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <ImageView
                android:tag="5"
                android:id="@+id/image6"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_margin="10dp"
                tools:ignore="ContentDescription" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="3"
            android:weightSum="3">

            <ImageView
                android:tag="6"
                android:id="@+id/image7"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_margin="10dp"
                tools:ignore="ContentDescription,NestedWeights" />

            <ImageView
                android:id="@+id/image8"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:tag="7"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <ImageView
                android:tag="8"
                android:id="@+id/image9"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_margin="10dp"
                tools:ignore="ContentDescription" />


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>